--- a/mSprayApp/res/layout/finished.xml
+++ b/mSprayApp/res/layout/finished.xml
@@ -388,10 +388,21 @@
         android:padding="9dp" >
 
         <Button
+            android:id="@+id/finished_button_backButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="3dp"
+            android:layout_weight="0.5"
+            android:background="@drawable/button_selector_red"
+            android:text="@string/back"
+            android:textColor="#fff"
+            android:textSize="28sp" />
+
+        <Button
             android:id="@+id/finished_button_finishedButton"
             android:layout_width="0px"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
+            android:layout_weight="0.5"
             android:background="@drawable/button_selector_green"
             android:text="@string/confirm"
             android:textColor="#fff"
